zetasql/parser/testdata/transaction.test
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]
START TRANSACTION
--
BeginStatement [0-17]
--
BEGIN TRANSACTION
==

Begin Transaction
--
BeginStatement [0-17]
--
BEGIN TRANSACTION
==

begin
--

BeginStatement [0-5]
--
BEGIN TRANSACTION
==

begin transaction read only
--

BeginStatement [0-27]
  TransactionModeList [18-27]
    TransactionReadWriteMode [18-27]
--
BEGIN TRANSACTION READ ONLY
==

BEGIN TRANSACTION ISOLATION LEVEL read uncommited
--
BeginStatement [0-49]
  TransactionModeList [18-49]
    TransactionIsolationLevel [18-49]
      Identifier(read) [34-38]
      Identifier(uncommited) [39-49]
--
BEGIN TRANSACTION ISOLATION LEVEL read uncommited
==


start transaction READ WRITE, ISOLATION LEVEL READ COMMITED
--
BeginStatement [0-59]
  TransactionModeList [18-28]
    TransactionReadWriteMode [18-28]
    TransactionIsolationLevel [30-59]
      Identifier(READ) [46-50]
      Identifier(COMMITED) [51-59]
--
BEGIN TRANSACTION READ WRITE, ISOLATION LEVEL READ COMMITED
==

BEGIN isolation level READ repeatable
--
BeginStatement [0-37]
  TransactionModeList [6-37]
    TransactionIsolationLevel [6-37]
      Identifier(READ) [22-26]
      Identifier(repeatable) [27-37]
--
BEGIN TRANSACTION ISOLATION LEVEL READ repeatable
==

BEGIN transaction Isolation Level Serializable
--
BeginStatement [0-46]
  TransactionModeList [18-46]
    TransactionIsolationLevel [18-46]
      Identifier(Serializable) [34-46]
--
BEGIN TRANSACTION ISOLATION LEVEL Serializable
==

# Arbitrary isolation levels are allowed.
BEGIN TRANSACTION ISOLATION LEVEL FOO bar
--
BeginStatement [0-41]
  TransactionModeList [18-41]
    TransactionIsolationLevel [18-41]
      Identifier(FOO) [34-37]
      Identifier(bar) [38-41]
--
BEGIN TRANSACTION ISOLATION LEVEL FOO bar
==

# Isolation level cannot have more than two identifiers.
BEGIN TRANSACTION ISOLATION LEVEL One Two Three
--
ERROR: Syntax error: Expected end of input but got identifier "Three" [at 1:43]
BEGIN TRANSACTION ISOLATION LEVEL One Two Three
                                          ^
==

BEGIN ISOLATION
--
ERROR: Syntax error: Expected keyword LEVEL but got end of statement [at 1:16]
BEGIN ISOLATION
               ^
==

SET TRANSACTION READ ONLY
--
SetTransaction [0-25]
  TransactionModeList [16-25]
    TransactionReadWriteMode [16-25]
--
SET TRANSACTION READ ONLY
==

SET TRANSACTION READ WRITE, ISOLATION LEVEL foo
--
SetTransaction [0-47]
  TransactionModeList [16-26]
    TransactionReadWriteMode [16-26]
    TransactionIsolationLevel [28-47]
      Identifier(foo) [44-47]
--
SET TRANSACTION READ WRITE, ISOLATION LEVEL foo
==

SET TRANSACTION
--
ERROR: Syntax error: Expected "," or "=" but got end of statement [at 1:16]
SET TRANSACTION
               ^
==

SET TRANSACTION IdentifierHere
--
ERROR: Syntax error: Expected "," or "=" but got identifier "IdentifierHere" [at 1:17]
SET TRANSACTION IdentifierHere
                ^
==

COMMIT
--
CommitStatement [0-6]
--
COMMIT
==

commit transaction
--
CommitStatement [0-18]
--
COMMIT
==

COMMIT WORK
--
ERROR: Syntax error: Expected end of input but got identifier "WORK" [at 1:8]
COMMIT WORK
       ^
==

ROLLBACK
--
RollbackStatement [0-8]
--
ROLLBACK
==

Rollback Transaction
--
RollbackStatement [0-20]
--
ROLLBACK
==

rollback work
--
ERROR: Syntax error: Expected end of input but got identifier "work" [at 1:10]
rollback work
         ^
